--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: historia + datos
 subtitle: blog de historia digital centroamericana
-use-site-title: true
+use-site-title: false
 ---
 
 <div class="posts-list">
