--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: historia + datos
+title: datahistoria : <small>blog de historia digital centroamericana</small>
 subtitle: blog de historia digital centroamericana
-use-site-title: false
+use-site-title: true
 ---
 
 <div class="posts-list">
