--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: datahistoria : <small>blog de historia digital centroamericana</small>
-subtitle: blog de historia digital centroamericana
+subtitle:
 use-site-title: true
 ---
 
