--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: datahistoria
+title: <code>data</code> historia
 subtitle: <small>blog de historia digital centroamericana</small>
 use-site-title: true
 ---
