--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: historia <var>+</var> <code>data</code>
+title: historia <code>data</code>
 subtitle: <small>blog de historia digital centroamericana</small>
 use-site-title: true
 ---
