--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: historia <code>data</code>
-subtitle: <small>blog de historia digital centroamericana</small>
+title: historia+data
+subtitle: <small>laboratorio de historia digital</small>
 use-site-title: true
 ---
 
