--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: historia+data
-subtitle: <small>laboratorio de historia digital</small>
+title: Historia+Data
+subtitle: <small>Laboratorio de historia digital</small>
 use-site-title: true
 ---
 
