--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Historia+Data
 subtitle: <small>Laboratorio de historia digital</small>
-use-site-title: false
+use-site-title: true
 ---
 
 <div class="posts-list">
