--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: Historia+Data
-subtitle: <small>Laboratorio de historia digital</small>
-use-site-title: true
+#title: Historia+Data
+#subtitle: <small>Laboratorio de historia digital</small>
+#use-site-title: true
 bigimg: /img/header.png
 ---
 
