--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 #title: Historia+Data
 #subtitle: <small>Laboratorio de historia digital</small>
 #use-site-title: true
-bigimg: /img/logo-blog.png
+bigimg: /img/header.png
 ---
 
 <div class="posts-list">
