--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Historia+Data
+title: Historia Data
 subtitle: <small>Laboratorio de historia digital</small>
 use-site-title: true
 ---
